; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_PauseOrUnpause.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_PauseOrUnpause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FrameAdvanceVariable = common dso_local global i64 0, align 8
@RunNormal = common dso_local global i64 0, align 8
@Paused = common dso_local global i64 0, align 8
@SCSP_MUTE_SYSTEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PauseOrUnpause() #0 {
  %1 = load i64, i64* @FrameAdvanceVariable, align 8
  %2 = load i64, i64* @RunNormal, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i64, i64* @Paused, align 8
  store i64 %5, i64* @FrameAdvanceVariable, align 8
  %6 = load i32, i32* @SCSP_MUTE_SYSTEM, align 4
  %7 = call i32 @ScspMuteAudio(i32 %6)
  br label %12

8:                                                ; preds = %0
  %9 = load i64, i64* @RunNormal, align 8
  store i64 %9, i64* @FrameAdvanceVariable, align 8
  %10 = load i32, i32* @SCSP_MUTE_SYSTEM, align 4
  %11 = call i32 @ScspUnMuteAudio(i32 %10)
  br label %12

12:                                               ; preds = %8, %4
  ret void
}

declare dso_local i32 @ScspMuteAudio(i32) #1

declare dso_local i32 @ScspUnMuteAudio(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
